restminie 1.x, 2016-10-23
-------------------------
- New option (str) log_type.